add_library(client SHARED client.cpp common.cpp)
configure_DynamoRIO_client(client)
use_DynamoRIO_extension(client drmgr)
use_DynamoRIO_extension(client drreg)
use_DynamoRIO_extension(client drutil)
use_DynamoRIO_extension(client drx)
use_DynamoRIO_extension(client drsyms)

add_library(runner SHARED runner.cpp common.cpp)
configure_DynamoRIO_client(runner)
use_DynamoRIO_extension(runner drmgr)
use_DynamoRIO_extension(runner drreg)
use_DynamoRIO_extension(runner drutil)
use_DynamoRIO_extension(runner drx)
use_DynamoRIO_extension(runner drsyms)
