add_library(collector SHARED collector.cpp common.cpp)
configure_DynamoRIO_client(collector)
use_DynamoRIO_extension(collector drmgr)
use_DynamoRIO_extension(collector drreg)
use_DynamoRIO_extension(collector drutil)
use_DynamoRIO_extension(collector drwrap)
use_DynamoRIO_extension(collector drx)
use_DynamoRIO_extension(collector drsyms)

add_library(runner SHARED runner.cpp common.cpp)
configure_DynamoRIO_client(runner)
use_DynamoRIO_extension(runner drmgr)
use_DynamoRIO_extension(runner drreg)
use_DynamoRIO_extension(runner drutil)
use_DynamoRIO_extension(runner drwrap)
use_DynamoRIO_extension(runner drx)
use_DynamoRIO_extension(runner drsyms)
